k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops
spec:
  selector:
    app.kubernetes.io/name: devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
